icon link repared

--- a/src/main/resources/templates/App.jade
+++ b/src/main/resources/templates/App.jade
@@ -1,6 +1,6 @@
 !!! 5
 html
     head
-        link(type='icon',href='/src/main/resources/favicon.ico')
+        link(rel='shortcut icon', type='icon', href='http://127.0.0.1:1337/favicon.ico')
         title= title
     body
