--- a/src/main/resources/templates/App.jade
+++ b/src/main/resources/templates/App.jade
@@ -4,3 +4,13 @@ html
         link(rel='shortcut icon', type='icon', href='http://127.0.0.1:1337/favicon.ico')
         title= title
     body
+        form(action='/search',method='post')
+            input(
+                type='text'
+                name='search'
+            )
+            input(
+                type='submit'
+                value='Search'
+            )
+
