more keys in the response

--- a/src/main/resources/templates/App.jade
+++ b/src/main/resources/templates/App.jade
@@ -8,6 +8,7 @@ html
             input(
                 type='text'
                 name='search'
+                placeholder='Card name'
             )
             input(
                 type='submit'
