--- a/src/main/resources/templates/searchResult.jade
+++ b/src/main/resources/templates/searchResult.jade
@@ -5,3 +5,16 @@ html
         title= title
     body
         img(src=img)
+        p= "Race: "+race
+        p= "health: "+health
+        p= "type: "+type
+        p= "locale: "+locale
+        p= "cardSet: "+cardSet
+        p= "attack: "+attack
+        p= "cardId: "+cardId
+        p= "faction: "+faction
+        p= "name: "+name
+        img(src=imgGold)
+        p= "text: "+text
+        p= "rarity: "+rarity
+        p= "cost: "+cost
