--- a/src/main/resources/templates/searchResult.jade
+++ b/src/main/resources/templates/searchResult.jade
@@ -3,6 +3,10 @@ html
     head
         link(rel='shortcut icon', type='icon', href='http://127.0.0.1:1337/favicon.ico')
         title= title
+        style.
+            html {
+                background-color: #eed1a5;
+            }
     body
         img(src=img)
         p= "Race: "+race
